tests/parse-fail/bad_fn_type3.fl.0.exp
Error: bad_fn_type3.fl(3,27): Expected comma, but found: asdf
pub mod foo {
    pub struct Foo {
        pub foo : fn(asdf asdf) -> !;
                          ^           
    }
}
